--- a/src/scripts/i18n/ru.json
+++ b/src/scripts/i18n/ru.json
@@ -209,7 +209,7 @@
     "failure": "Нет подключения к сервису",
     "failureHint": "Please check the service configuration or network status.",
     "fetchUnlimited": "Без ограничений (не рекомендуется)",
-    "exportToLite": "Экспорт в Fluent Reader Lite"
+    "exportToLite": "Экспорт в TNCR Reader Lite"
   },
   "app": {
     "cleanup": "Очистка",
@@ -225,7 +225,7 @@
     "data": "Данные приложения",
     "backup": "Резервная копия",
     "restore": "Восстановление",
-    "frData": "Данные Fluent Reader",
+    "frData": "Данные TNCR Reader",
     "language": "Язык интерфейса",
     "theme": "Тема",
     "lightTheme": "Светлая",
