--- a/src/scripts/i18n/fr-FR.json
+++ b/src/scripts/i18n/fr-FR.json
@@ -216,7 +216,7 @@
     "data": "Données de l'appplication",
     "backup": "Sauvegarder",
     "restore": "Restorer",
-    "frData": "Données de Fluent Reader",
+    "frData": "Données de TNCR Reader",
     "language": "Langue d'affichage",
     "theme": "Thème",
     "lightTheme": "Mode jour",
