--- a/src/scripts/i18n/ja.json
+++ b/src/scripts/i18n/ja.json
@@ -203,7 +203,7 @@
     "failure": "サーバ接続中にエラーが発生しました。",
     "failureHint": "サーバ設定とネットワーク接続を確認ください",
     "fetchUnlimited": "無制限（非推奨）",
-    "exportToLite": "Fluent Reader Liteにエクスポート"
+    "exportToLite": "TNCR Reader Liteにエクスポート"
   },
   "app": {
     "cleanup": "一括削除",
@@ -219,7 +219,7 @@
     "data": "アプリデータ",
     "backup": "バックアップ",
     "restore": "リストア",
-    "frData": "Fluent Readerデータ",
+    "frData": "TNCR Readerデータ",
     "language": "表示言語",
     "theme": "アプリテーマ",
     "lightTheme": "明るいテーマ",
