--- a/src/scripts/i18n/pt-PT.json
+++ b/src/scripts/i18n/pt-PT.json
@@ -209,7 +209,7 @@
     "failure": "Não foi possível conectar ao serviço",
     "failureHint": "Por favor verifique a configuração do serviço ou o estado da rede.",
     "fetchUnlimited": "Ilimitado (não recomendado)",
-    "exportToLite": "Exportar para o Fluent Reader Lite"
+    "exportToLite": "Exportar para o TNCR Reader Lite"
   },
   "app": {
     "cleanup": "Limpar",
@@ -225,7 +225,7 @@
     "data": "Dados da aplicação",
     "backup": "Backup",
     "restore": "Restorar",
-    "frData": "Dados do Fluent Reader",
+    "frData": "Dados do TNCR Reader",
     "language": "Idioma",
     "theme": "Tema",
     "lightTheme": "Modo claro",
