--- a/src/scripts/i18n/tr.json
+++ b/src/scripts/i18n/tr.json
@@ -216,7 +216,7 @@
     "data": "Uygulama Verileri",
     "backup": "Yedekle",
     "restore": "Geri Yükle",
-    "frData": "Fluent Reader Verileri",
+    "frData": "TNCR Reader Verileri",
     "language": "Görüntüleme dili",
     "theme": "Tema",
     "lightTheme": "Aydınlık",
