--- a/src/scripts/i18n/uk.json
+++ b/src/scripts/i18n/uk.json
@@ -203,7 +203,7 @@
     "failure": "Не вдається підключитися до служби",
     "failureHint": "Будь ласка, перевірте конфігурацію служби або стан мережі.",
     "fetchUnlimited": "Необмежений (не рекомендується)",
-    "exportToLite": "Експорт у програму Fluent Reader Lite"
+    "exportToLite": "Експорт у програму TNCR Reader Lite"
   },
   "app": {
     "cleanup": "Прибирати",
@@ -219,7 +219,7 @@
     "data": "Дані програми",
     "backup": "Резервне копіювання",
     "restore": "Відновити",
-    "frData": "Дані Fluent Reader",
+    "frData": "Дані TNCR Reader",
     "language": "Мова",
     "theme": "Тема",
     "lightTheme": "Світлий режим",
