--- a/src/scripts/i18n/zh-TW.json
+++ b/src/scripts/i18n/zh-TW.json
@@ -208,7 +208,7 @@
     "failure": "連線到服務時出錯",
     "failureHint": "請檢查服務配置或網路連線",
     "fetchUnlimited": "無限制（不建議）",
-    "exportToLite": "匯出至 Fluent Reader Lite"
+    "exportToLite": "匯出至 TNCR Reader Lite"
   },
   "app": {
     "cleanup": "清理",
@@ -224,7 +224,7 @@
     "data": "應用資料",
     "backup": "備份",
     "restore": "還原",
-    "frData": "Fluent Reader資料",
+    "frData": "TNCR Reader資料",
     "language": "介面語言",
     "theme": "應用主題",
     "lightTheme": "淺色模式",
